src/test/ui/coherence/coherence-projection-uncovered-ty-3.stderr
error[E0210]: associated type `<T as Id>::Assoc` must be covered by another type when it appears before the first local type (`Local<T>`)
  --> $DIR/coherence-projection-uncovered-ty-3.rs:15:17
   |
LL | impl<T> Foreign<<T as Id>::Assoc, Local<T>> for () {
   |                 ^^^^^^^^^^^^^^^^ associated type `<T as Id>::Assoc` must be covered by another type when it appears before the first local type (`Local<T>`)
   |
   = note: implementing a foreign trait is only possible if at least one of the types for which it is implemented is local, and no uncovered type parameters or associated types appear before that first local type
   = note: in this case, 'before' refers to the following order: `impl<..> ForeignTrait<T1, ..., Tn> for T0`, where `T0` is the first and `Tn` is the last

error: aborting due to previous error

For more information about this error, try `rustc --explain E0210`.
